[tool.poetry]
name = "bud_ecosystem_utils"
version = "0.21.2"
description = ""
authors = ["Rahul V Ramesh <rahulvramesh@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dapr = "^1.11.0"
tqdm = "^4.66.0"
pydantic = "^2.4.2"
smart-open = {extras = ["s3"], version = "^6.4.0"}
ray = "2.7.0"
huggingface-hub = "^0.19.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
