[tool.poetry]
name = "bud_ecosystem_utils"
version = "0.18.0"
description = ""
authors = ["Rahul V Ramesh <rahulvramesh@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dapr = "^1.11.0"
aiohttp = "^3.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
